syntax = "proto3";

package saas.v1alpha1;

import "core/v1alpha1/object.proto";
import "saas/v1alpha1/agent_id.proto";
import "saas/v1alpha1/agent_id_response.proto";

message PushAgentRequest {
  oneof repository {
    string repository_id = 1;
    string repository_name = 2;
  }
  core.v1alpha1.Object model = 4;
}

message PushAgentResponse {
  AgentIdentifierResponse id = 1;
}

message PullAgentRequest {
  AgentIdentifier id = 1;
}

message PullAgentResponse {
  core.v1alpha1.Object model = 1;
}

// This API is manily for CLIs and the implementation of these APIs should communicate with the Agent Directory
service AgentDirService {
  rpc PushAgent(stream PushAgentRequest) returns (PushAgentResponse) {}
  rpc PullAgent(PullAgentRequest) returns (stream PullAgentResponse) {}
}
